--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto', sans-serif; /* Google Font 'Roboto' */
 }
 
 strong {
-	font-weight: bold;
+	font-weight: bold; /* Setting all strong elements bold. */
 }
 
 #container {
@@ -16,12 +16,10 @@ strong {
 	display: block;
 	margin-bottom: 5px;
 }
-
 #main-header hr {
 	height: 3px;
 	background-color: #4ea0d8;
 }
-
 #main-header h1 {
 	margin-top: 40px;
 	margin-left: 22%;
@@ -29,7 +27,6 @@ strong {
 	font-weight: bold;
 	letter-spacing: 1.2;
 }
-
 #main-header h4 {
 	margin-top: 15px;
 	margin-bottom: 50px;
@@ -37,12 +34,12 @@ strong {
 	font-size: 18px;
 }
 
+/* Styling for left side content */
 #left {
 	float: left;
 	width: 50%;
 	margin-right: 5%;
 }
-
 #left ul li {
 	margin-bottom: 30px;
 }
@@ -55,7 +52,6 @@ strong {
 	padding-bottom: 10px;
 	margin-bottom: 10px;
 	padding-top: 10px;
-
 }
 #left p {
 	margin: 10px 0 10px 0;
@@ -64,7 +60,6 @@ strong {
 
 #left-footer {
 	border-top: #ddd solid 1px;
-
 }
 #left-footer h3 {
 	padding-top: 10px;
@@ -72,11 +67,11 @@ strong {
 	font-size: 20px;
 }
 
+/* Styling for right side content - Form Element */
 #right {
 	float: right;
 	width: 45%;
 }
-
 #right form {
 	border: 3px solid #4ea0d8;;
 	border-radius: 10px;
@@ -96,7 +91,6 @@ strong {
 
 .form-element {
 	margin-bottom: 25px;
-
 }
 .form-element label {
 	display: inline-block;
@@ -115,6 +109,7 @@ strong {
 .form-element input[type = "text"]:focus, .form-element input[type = "email"]:focus {
 	border: 3px solid #4ea0d8;
 }
+
 form span {
 	margin-right: 50px;	
 }
@@ -148,10 +143,13 @@ form input[type="submit"]:hover {
 	opacity: .8;
 	font-style: italic;
 }
+
+/* Reset Class for clearing all floats*/
 .reset {
 	clear: both;
 }
 
+/* Styling for Testimonial Content */
 #testimonial {
 	margin-top: 50px;
 	line-height: 1.3;
@@ -166,21 +164,25 @@ form input[type="submit"]:hover {
 	margin-right: 10px;
 }
 
+/* Styling for footer of the page */
 #main-footer {
 	padding-top: 30px;
 	text-align: center;
 	color: #a6a6a6;
 }
-
 #main-footer hr {
 	height: 1px;
 	background-color: black;
 	margin-bottom: 10px;
 }
 
+/**********************************************************************************/
+
 /*Responsive Design , Media Query */
 
+/* Screen Size < 960 px , ie for Tabs and Small Laptops */
 @media(max-width: 960px) {
+	
 	#main-header h1, #main-header h4 {
 		margin: 20px;
 		width: 100%;
@@ -208,13 +210,15 @@ form input[type="submit"]:hover {
 		margin: 10px auto;
 		padding-bottom: 10px;
 	}
-
 }
 
+/* Screen Size < 568 px , ie for mobile phones */
 @media(max-width: 568px) {
+	
 	#main-header h1 {
 		font-size: 20px;
-
 	}
 }
+
+/**********************************************************************************/
 
